samples/_failures_safe/1761171647_bf3251_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92350493.c: In function ‘main’:
./samples/SAFE/__tmp_92350493.c:155:9: error: expected expression at end of input
  155 |         free_matrix(&
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_92350493.c:155:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92350493.c:155:9: error: expected declaration or statement at end of input
